added exceptions, completed extension
